# toolfilmAI

./: README.md  action_detection.py  audio_processing.py  build_cpp_modules.bat  build_cpp_modules.py  debug_gpu.py  fix_cuda_install.py  fix_yolo8_gpu.py  main.py  requirements.txt  run_cuda_fix.bat  run_toolfilm.bat  run_yolo8_gpu_fix.bat  summary_generator.py  video_processing.py  yolo8_detection.py
cpp/: CMakeLists.txt  optical_flow.cpp  optical_flow_cuda.cu  setup.py  video_concat.cpp  video_extract.cpp
utils/: gpu_utils.py  yolo_utils.py
